[r209]
- Fixed K@ [BBS] command not working correcly when trying to kill message(s) 
  addressed to @BBS where a full H-route is used (entered manually or from WP).
[r210]
- Fixed when c_filter or m_filter aren't found the first attempt after FBB 
  start, they won't be called on subsequent connects or messages.
[r211]
- Added extra error handling in drv_sock.c to prevent a segfault loop under
  some circumstances.
[r212]
- Fixed tabs in last commit. Missing comment r211: Added extra error handling 
  in drv_sock.c to prevent a segfault loop under some circumstances.
[r213]
- Corrected tabs for changes committed in [r209] and [r210]
[r214]
- Added comments for some options in fbbopt.conf.
[r215]
- Changed * characters into # in forward.sys to match comment character with other files.
[r216]
- Clarified callsign setting a bit more in generated fbb.conf file.
[r217]
- Changed maintenance scripts to use build system's prefix path.
[r218]
- Corrected error message in initfwd.c
[r219]
- Removed private callsign check for SB command because of problems with
  sending bulletins to destinations which validate with the private callsign
  check (eg. 7PLUS@WW)
[r220]
- Added notification in messages received via SMTP
[r221]
- Changed several files to reflect current maintainer on request of 
  Bernard F6BVP. He has announced he definately stopped writing code for FBB.
[r222]
- Changed read/write functions return value handling added in [r198].
[r223]
- Fixed failing duplicate message check on messages killed or archived by m_filter.
- Corrected storing incorrect message number in wfbid.sys for held messages.
[r224]
- Added feature to use whitelisting or excluding rules in reject.sys.
- Fixed error display/logging when parsing reject.sys at startup.
- Changed example reject.sys file.
[r225]
- Corrected file paths in README.
[r226]
- Fixed status command (%) output, now showing correct memory values.
- Added uptime and load average to status command (%) output.